# ChangeLog for dev-ruby/aasm
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*aasm-3.0.24 (29 Nov 2013)

  29 Nov 2013; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.24.ebuild:
  Version bump.

*aasm-3.0.23 (24 Oct 2013)

  24 Oct 2013; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.23.ebuild:
  Version bump.

  24 Oct 2013; Hans de Graaff <graaff@gentoo.org> -aasm-3.0.17.ebuild,
  -aasm-3.0.19.ebuild:
  Cleanup.

*aasm-3.0.22 (13 Sep 2013)

  13 Sep 2013; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.22.ebuild:
  Version bump.

*aasm-3.0.19 (21 Jun 2013)

  21 Jun 2013; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.19.ebuild:
  Version bump.

  21 Jun 2013; Hans de Graaff <graaff@gentoo.org> -aasm-3.0.15.ebuild,
  -aasm-3.0.16.ebuild:
  Cleanup.

*aasm-3.0.17 (09 May 2013)

  09 May 2013; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.17.ebuild:
  Version bump.

  09 May 2013; Hans de Graaff <graaff@gentoo.org> -aasm-3.0.9.ebuild,
  -aasm-3.0.14.ebuild:
  Cleanup.

*aasm-3.0.16 (14 Feb 2013)

  14 Feb 2013; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.16.ebuild:
  Version bump.

  02 Jan 2013; Hans de Graaff <graaff@gentoo.org> aasm-3.0.15.ebuild:
  Add x86 keyword.

*aasm-3.0.15 (31 Dec 2012)

  31 Dec 2012; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.15.ebuild:
  Version bump.

*aasm-3.0.14 (15 Nov 2012)

  15 Nov 2012; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.14.ebuild:
  Version bump.

  15 Nov 2012; Hans de Graaff <graaff@gentoo.org> -aasm-3.0.3.ebuild,
  -aasm-3.0.4.ebuild, -aasm-3.0.8.ebuild:
  Cleanup.

*aasm-3.0.9 (05 Oct 2012)

  05 Oct 2012; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.9.ebuild:
  Version bump.

*aasm-3.0.8 (04 Jul 2012)

  04 Jul 2012; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.8.ebuild:
  Version bump.

*aasm-3.0.4 (13 Apr 2012)

  13 Apr 2012; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.4.ebuild:
  Version bump.

  13 Apr 2012; Hans de Graaff <graaff@gentoo.org> -aasm-2.3.1.ebuild,