@@ -1,3 +1,4 @@
 DIST aasm-3.0.22.gem 30208 SHA256 bbb1b55f19d147f1a550d9bd8429b763dc57572c059c4597170535d550dccf65 SHA512 6af31da490fa175f7057c24601001a58079d150c27c23f2857628716571491bcc8837653f24b1f85ee124e9d948deecf01878ef84151985a3cb0e07b589bea68 WHIRLPOOL 0ba96ae7b72719b94f34068e664672f12e9ba1fe617aaf0023d17487453448b7ce15805356cb71c16fa84acf9ebf44a7bf769210d64d06ebfda67cc87fd5ad39
 DIST aasm-3.0.23.gem 30208 SHA256 c6a1392caad4f5b72479b787eacd9153ad3d9f9d838d75754b5df45e4e0fbeca SHA512 df87fd8832405941d2976aa87ece849636e7798aac97a61e05660f7ad707c3661b2199d152afb53fba3bf4f36ce7342853d64d9f2a34acd5a899805f5fedd2e5 WHIRLPOOL aadcc0b5ec9a98336c3845970ae433b767767e84e20216b467a60d5511d7fbf0ce8e271cc5a7b026e77bd86f5c2bbc32b86ac4c3498979fb97cd14818826a97d
 DIST aasm-3.0.24.gem 31232 SHA256 062d622b5ce0381799076c76ffd1db4f489b60f04fb228ca153b4b1222e8c29e SHA512 c4ae14048226863b7fb7fa5d3f773619510d349b8ab28d087a760b7c42278290ebb598c4fe2b60fa8c926e9b7a7ab0ae8bd9192caa9e2b7f55f7a52f404ff077 WHIRLPOOL 649635b19673995f190008ac4d2d6408d76137ac619f429c33e91dabfae98eb350c14cf14e3219bffe004204e1524fb994b6e564ba0bf40da7560cae55a6127d
+DIST aasm-3.0.25.gem 31744 SHA256 1205764bfc42e91618591799a8641ac9b6799169f262c2c65a53222e31385076 SHA512 0ed6ec47ffde8505f502be5a582ee7847788914f95b9ac01b570ba51d4725c9a47ab29d093fb2231cbee5377e958de3de83e0bb86785ed3aeef9a9568ee4d3b7 WHIRLPOOL 77d48f3f6bf96209ee7b173cdd5f59d665553ab788a415ce890cd369a3320ee36ad12d6d8861e783c61bd705719ed60bc6e11caa47480a9e981a870c233e335b
