@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/aasm
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*aasm-3.0.25 (10 Jan 2014)
+
+  10 Jan 2014; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.25.ebuild:
+  Version bump.
 
 *aasm-3.0.24 (29 Nov 2013)
 
